# automix-engine

./: .gitignore  AGENTS.md  CMakeLists.txt  Package.swift  README.md  keys.example.json  preview_transition.sh
apple/Apps/AutomixMac/: Info.plist  README.md  cmake-build  project.yml
apple/Examples/AutomixDemo/: AutomixDemoApp.swift  ContentView.swift  EngineViewModel.swift  LastfmService.swift  MetadataService.swift  ScrobbleQueueStore.swift  SystemNotifier.swift  TrackMetadataLoader.swift
apple/Sources/Automix/: AutoMixEngine.swift  AutoMixPlaylist.swift  AutoMixTypes.swift
apple/Tests/AutomixTests/: AutomixTests.swift
docs/: 1.ChatGPT-自动DJ混音引擎构想.md  2.自动DJ混音引擎开发计划dev-plan.md  4.局域网音频广播方案audio-broadcast-plan.md  5.Swift包装层与SwiftUI开发计划.md  dev-plan.md  distribution-plan.md
examples/: decode_test.cpp
include/automix/: automix.h  module.modulemap  types.h
scripts/: README.md  dedupe_tracks.py  preview_transition.sh  release.sh  repair_flac.sh  switch_arm64.sh
src/analyzer/: analyzer.cpp  analyzer.h  bpm_detector.cpp  bpm_detector.h  energy_analyzer.cpp  energy_analyzer.h  key_detector.cpp  key_detector.h
src/api/: automix_api.cpp
src/cli/: db_path.cpp  db_path.h  play_main.cpp  playlist_main.cpp  render_transition.cpp  scan_main.cpp
src/core/: store.cpp  store.h  types.cpp  utils.cpp  utils.h
src/decoder/: decoder.cpp  decoder.h
src/matcher/: playlist.cpp  playlist.h  similarity.cpp  similarity.h  transition_points.cpp  transition_points.h
src/mixer/: audio_output.cpp  audio_output.h  crossfader.cpp  crossfader.h  deck.cpp  deck.h  engine.cpp  engine.h  scheduler.cpp  scheduler.h
tests/: CMakeLists.txt  test_basic.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4.cpp
